--- a/source/Maestro.Wpf/Views/FlightLabelView.xaml
+++ b/source/Maestro.Wpf/Views/FlightLabelView.xaml
@@ -64,6 +64,10 @@
                                 <Setter Property="Visibility" Value="Visible"/>
                                 <Setter Property="BevelType" Value="Sunken"/>
                             </DataTrigger>
+                            <DataTrigger Binding="{Binding IsDragging, RelativeSource={RelativeSource AncestorType={x:Type views:FlightLabelView}}}" Value="True">
+                                <Setter Property="Visibility" Value="Visible"/>
+                                <Setter Property="BevelType" Value="Sunken"/>
+                            </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </controls:BeveledBorder.Style>
