ui: Click to move flights between ladders

--- a/source/Maestro.Wpf/Views/MaestroView.xaml
+++ b/source/Maestro.Wpf/Views/MaestroView.xaml
@@ -261,7 +261,8 @@
             ClipToBounds="True"
             Background="Transparent"
             ContextMenuOpening="OnContextMenuOpening"
-            MouseRightButtonDown="OnCanvasRightClick">
+            MouseRightButtonDown="OnCanvasRightClick"
+            MouseLeftButtonDown="OnCanvasLeftClick">
             <Canvas.ContextMenu>
                 <ContextMenu>
                     <ContextMenu.Style>
